k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laptop-db-service   # 앱들이 호출할 가상의 이름
  namespace: default
spec:
  type: ExternalName
  externalName: 10.100.0.5  #  실제 노트북이 Headscale VPN에서 할당받은 IP입력.
