k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 80         # 서비스가 외부(인그레스)로부터 받는 포트
      targetPort: 80   # 실제 파드(컨테이너)로 보낼 포트
