k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: php-app-route
  namespace: default
spec:
  parentRefs:
  - name: ambient-gateway # 위에서 만든 정문과 연결
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-app-service # NodePort 서비스 이름
      port: 80
